--- a/animal-chipping-front/src/index.html
+++ b/animal-chipping-front/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <app-root class="vh-100 d-flex flex-column"></app-root>
+  <app-root class="app-root vh-100 d-flex flex-column"></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
