--- a/animal-chipping-org/src/index.html
+++ b/animal-chipping-org/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>AnimalChippingOrg</title>
@@ -8,8 +9,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
 </head>
+
 <body>
-  <app-root class="min-vh-100 d-flex flex-column"></app-root>></app-root>
+  <app-root class="min-vh-100 d-flex flex-column"></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
